feat(browse-classification): prepare and populate index for classification browse
Closes: MSEARCH-668
Signed-off-by: psmagin <pavlo_smahin@epam.com>